invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_81.src
.IPPcode24
CONCAT LF@a int@49